fix avatar's position and content overflow

--- a/src/component/ZiltagPreview/index.css
+++ b/src/component/ZiltagPreview/index.css
@@ -1,16 +1,23 @@
 .ziltag-ziltag-preview {
+  position: relative;
   font-size: 12px;
   line-height: 15px;
   color: rgba(0, 0, 0, .87);
 }
 
-.ziltag-ziltag-preview__avatar {
+.ziltag-ziltag-preview__content {
+  width: calc(100% - 38px);
   height: 100%;
-  border-radius: 50%;
+  overflow: hidden;
+}
+
+.ziltag-ziltag-preview__avatar {
+  width: 38px;
+  height: 38px;
 }
 
 .ziltag-ziltag-preview .ziltag-ziltag-preview__avatar {
-  float: right;
-  width: 38px;
-  height: 38px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
